# mcpp

./: CMakeLists.txt
cmake/Modules/: CheckTargetCPU.c.in  CheckTargetCPU.cmake
src/: CMakeLists.txt  config.h.in.cmake
